# gemini-agent

./: .env  .gitignore  main.py  pyproject.toml
core/: chat.py
core/services/: gemini_service.py
